--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCDIRS ". ./temperature ./bluetooth" )
+set(COMPONENT_SRCDIRS ". ./temperature ./bluetooth ./flash ./wifi" )
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
